--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma": "^0.13.22",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
+    "moment": "^2.14.1",
     "node": "0.0.0",
     "phantomjs-prebuilt": "^2.1.7",
     "time-grunt": "^1.0.0"
